<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_gravity="top|center"
            android:background="@drawable/img_back_register" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?android:actionBarSize"

            >

            <LinearLayout
                android:id="@+id/linearContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="45dp"
                android:paddingRight="45dp"
                android:paddingTop="130dp">

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/selector_edittext_grey"
                    android:fontFamily="@font/avenir_regular"
                    android:gravity="center"
                    android:hint="@string/hintFirstName"
                    android:inputType="text"
                    android:maxLength="30"
                    android:textColor="@color/grey"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/mediumSize" />

                <EditText
                    android:id="@+id/editLastName"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/selector_edittext_grey"
                    android:fontFamily="@font/avenir_regular"
                    android:gravity="center"
                    android:hint="@string/hintLastName"
                    android:inputType="text"
                    android:maxLength="30"
                    android:textColor="@color/grey"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/mediumSize" />

                <EditText
                    android:id="@+id/editPhone"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/selector_edittext_grey"
                    android:fontFamily="@font/avenir_regular"
                    android:gravity="center"
                    android:hint="@string/hintPhone"
                    android:inputType="number"
                    android:maxLength="9"
                    android:textColor="@color/grey"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/mediumSize" />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/selector_edittext_grey"
                    android:gravity="center"
                    android:hint="@string/hintEmail"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/grey"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/mediumSize" />

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/selector_edittext_grey"
                    android:fontFamily="@font/avenir_regular"
                    android:gravity="center"
                    android:hint="@string/hintPassword"
                    android:inputType="textPassword"
                    android:textColor="@color/grey"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/mediumSize" />


                <EditText
                    android:id="@+id/editConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/selector_edittext_grey"
                    android:fontFamily="@font/avenir_regular"
                    android:gravity="center"
                    android:hint="@string/hintConfirmPassword"
                    android:inputType="textPassword"
                    android:textColor="@color/grey"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/mediumSize" />

                <Button
                    android:id="@+id/buttonRegister"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/selector_border_button_orange"
                    android:fontFamily="@font/avenir_regular"
                    android:text="@string/textRegisterData"
                    android:textColor="@color/white"
                    android:textSize="11dp" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/brown"
        android:orientation="horizontal"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">


        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:background="@drawable/selector_button_brown"
            android:padding="15dp"
            android:src="@drawable/ic_atras" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/avenir_regular"
            android:text="@string/textRegister"
            android:textColor="@color/white"
            android:textSize="@dimen/mediumSize" />
    </FrameLayout>

</FrameLayout>
